--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
   },
   "scripts": {
     "dev": "yarn nodemon --inspect dist/index.js",
-    "watch": "tsc -w"
+    "watch": "tsc -w",
+    "jest": "jest -i"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.0",
     "@types/node": "^18.15.1",
+    "@types/supertest": "^2.0.12",
     "dotenv": "^16.0.3",
     "express-validator": "^6.15.0",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.21",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
