--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.1.0"
   },
   "scripts": {
@@ -17,6 +18,7 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.15.1",
     "@types/supertest": "^2.0.12",
     "dotenv": "^16.0.3",
