--- a/tsconfig.json
+++ b/tsconfig.json
@@ -100,6 +100,8 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
+  "files": ["src/types/index.d.ts"],
   "include": ["src/**/*"],
   "exclude": ["node_modules","**/*.test.ts"]
 }
+
