--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
   "license": "MIT",
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/nodemailer": "^6.4.7",
+    "@types/uuid": "^9.0.1",
     "bcrypt": "^5.1.0",
+    "date-fns": "^2.30.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mongodb": "^5.1.0"
+    "mongodb": "^5.1.0",
+    "nodemailer": "^6.9.1",
+    "uuid": "^9.0.0"
   },
   "scripts": {
     "dev": "yarn nodemon --inspect dist/index.js",
