--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "uuid": "^9.0.0"
   },
   "scripts": {
+    "start": "node dist/index.js",
+    "build": "tsc",
     "dev": "yarn nodemon --inspect dist/index.js",
     "watch": "tsc -w",
     "jest": "jest -i"
