--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/nodemailer": "^6.4.7",
     "@types/uuid": "^9.0.1",
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "date-fns": "^2.30.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
@@ -21,6 +22,7 @@
     "jest": "jest -i"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
     "@types/jsonwebtoken": "^9.0.1",
